--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-transformers==4.39.3
-bitsandbytes==0.43.1
-accelerate==0.31.0
-peft==0.11.1
-adapters==0.2.1
+transformers
+bitsandbytes
+accelerate
+peft
+adapters
 flask==3.0.3
